fixed global scrollbar style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -193,6 +193,49 @@ thead tr td {
   }
 }
 
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+::-webkit-scrollbar-button {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #616161;
+    border: 0px none #ffffff;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #525252;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #4f4f4f;
+}
+
+::-webkit-scrollbar-track {
+    background: #191D21;
+    border: 0px none #ffffff;
+    border-radius: 12px;
+}
+
+::-webkit-scrollbar-track:hover {
+    background: #191D21;
+}
+
+::-webkit-scrollbar-track:active {
+    background: #191D21;
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
 /* Theme */
 .card {
   background-color: #424242;
